fix height wrap image

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -217,7 +217,7 @@ a {
 .hero__img-wrap {
     position: relative;
     border-radius: 10px;
-    max-height: 240px;
+    height: 240px;
     overflow: hidden;
 }
 .hero__modal {
@@ -356,6 +356,9 @@ a {
         margin-top: 23px;
         grid-template-columns: 1fr;
         row-gap: 30px;
+    }
+    .hero__img-wrap {
+        height: 290px;
     }
     .hero__heading {
         font-size: 2rem;
